syntax = "proto3";

package user_auth_proto;

service UserService {
  rpc getUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc getUserByEmail(GetUserByEmail) returns (GetUserByEmailResponse);
}
//get
message GetUserByIdResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserByIdRequest {
  int32 id = 1;
}
message GetUserByEmail {
  string email = 1;
}

message GetUserByEmailResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}